force-app/main/default/objects/KB_Scoring_Dimension__mdt/KB_Scoring_Dimension__mdt.object-meta.xml
<CustomObject>
    <description>Registry of scoring dimensions. Each active record defines one dimension the scorer can run. Adding a new dimension is a deploy of one metadata record + one Apex scorer class — no schema change required.</description>
    <label>KB Scoring Dimension</label>
    <pluralLabel>KB Scoring Dimensions</pluralLabel>
</CustomObject>