force-app/main/default/objects/KB_Scoring_Dimension__mdt/fields/Callouts_Per_Article__c.field-meta.xml
<CustomField>
    <fullName>Callouts_Per_Article__c</fullName>
    <description>Average Einstein callouts issued per article when Requires_LLM is true. Used by the router to size tiers against the 100-callout governor limit.</description>
    <label>Callouts Per Article</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>