force-app/main/default/objects/KB_Scoring_Dimension__mdt/fields/Default_Weight__c.field-meta.xml
<CustomField>
    <fullName>Default_Weight__c</fullName>
    <description>Seed weight used when KB_Score_Weight__c.Weights_JSON__c has no entry for this dimension. Admin-editable runtime weights override this.</description>
    <label>Default Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>