force-app/main/default/objects/KB_Scoring_Dimension__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short user-facing description of what this dimension measures. Rendered as helptext on score cards and in the wizard. Metadata-only — edit by redeploying the CustomMetadata record, not via DML.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>