force-app/main/default/objects/KB_Scoring_Dimension__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, the dimension is not dispatched or scored. Allows soft-removal of a dim without deleting the CMDT record.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>