force-app/main/default/objects/KB_Scoring_Dimension__mdt/fields/Requires_LLM__c.field-meta.xml
<CustomField>
    <fullName>Requires_LLM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this dimension issues Einstein callouts. Used by the facade router to compute callout cost per tier and pick sync/queueable/batch.</description>
    <label>Requires LLM</label>
    <type>Checkbox</type>
</CustomField>