force-app/main/default/objects/KB_Scoring_Dimension__mdt/fields/Requires_Pipeline_Data__c.field-meta.xml
<CustomField>
    <fullName>Requires_Pipeline_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this dimension reads Duplicate_Candidate__c rows written by the dedup pipeline. Dimensions with this flag default to 100 if no candidates are present.</description>
    <label>Requires Pipeline Data</label>
    <type>Checkbox</type>
</CustomField>