force-app/main/default/objects/KB_Scoring_Dimension__mdt/fields/Scorer_Class__c.field-meta.xml
<CustomField>
    <fullName>Scorer_Class__c</fullName>
    <description>Apex class name of the scorer, resolved via Type.forName() at runtime. Must implement KBScorable.</description>
    <label>Scorer Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>